initial bp to 11u for elastic-metaspace